# audio_reprompt

./: .env-example  .gitignore  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  dvc.yaml  makefile  pyproject.toml  spanio_caption_embeddings.csv
.dvc/: config
app/: Dockerfile  EDA Guedes.ipynb  GenMusicSpanio.ipynb  GenMusicSpanio.py  Makefile  README.md  config.txt  config.yaml  docker-compose.yml  main.py  nginx.conf
app/api/: Dockerfile  main.py  requirements.txt
app/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/models/: audio.py
app/musicgen/: Dockerfile  handler.py  requirements.txt
app/routes/: __init__.py  audio.py
app/test/: audio.py
config/: __init__.py  config.py  manager.py  typedefs.py  types.py
data/: .gitignore  README.md  cleaned.dvc  docs.dvc  embeddings.dvc  prompts.dvc  raw.dvc  reprompt.dvc  scores.dvc  tracks.dvc
data/embeddings/: music_prompt_embeddings.csv
evaluation/: __init__.py  scorer.py
k8s/: audio-reprompt-api-deployment.yaml  backend-deployment.yaml  frontend-app-deployment.yaml  frontend-deployment.yaml  ingress.yaml
metrics/: __init__.py  aesthetics.py  clap.py  fad.py
minikube/: audio-reprompt-api-deployment.yaml  config-and-pvc.yaml  frontend-app-deployment.yaml  ingress.yaml
models/: .gitignore  __init__.py  checkpoints.dvc  pipeline.py  pyproject.toml  tasty-musicgen-small.dvc  validate.py
models/allmini_v2/: encoder.py
models/clap_score/: __init__.py  model.py  typedef.py  typedefs.py  utils.py
models/descriptors/: clap_audio_encoder.py  clap_prompt_encoder.py  clap_prompt_encoder_laion.py  connection.py  db.py  dummy_fad.py  fad.py  model.py  parser.py  rag.py  rag_spanio_captions.py  setup.py  spanio_captions.py
models/food_prompts/: batch_utils.py  encoder.py  generator.py  parser.py  typedefs.py  utils.py
models/music_curator/: kimi_mcu.py  prompts.py
models/musicgen/: audio_generator.py  loader.py  model.py  typedefs.py
models/notebooks/: ComparisonCLAPWeights.ipynb  Food-terms-vocabulary.ipynb  GenMusicSpanio.ipynb  GenMusicSpanioBase.ipynb  GenMusicSpanioCLAP.ipynb  README.md  TSNE-enable-fusion.ipynb  analisis_clap_scores_taste.ipynb  analisis_dist_clap_scores.ipynb  clap-encoder-spanio-audiocaps.ipynb  clap_score_tasty_musicgen.ipynb  comparison-clap-weights.ipynb  evaluacion RAG.ipynb  fad_evaluation.ipynb  gen-audios-spanio-base-prompts.ipynb  gen-audios-spanio.ipynb  music-audio-generator.ipynb  prompt_engineering_anova.ipynb  prompt_engineering_experiments.ipynb  prompt_engineering_lexical_diversity.ipynb  prompts-evaluation-perplexity.ipynb  rag-evaluation.ipynb  tsne-music-caps.ipynb  two_way_anova_model_comparison.ipynb
models/prompts/: clap_prompt_encoder.py  parser.py  spanio_captions.py
models/scripts/: GenMusicSpanio.py  GenMusicSpanioBase.py  GenMusicSpanioClap.py  GenMusicSpanioEmbeddings.py  GenMusicSpanioEmbeddingsMetricsModule.py  GenMusicSpanioEmbeddingsMetricsModuleWithOnlyScore.py  GenMusicSpanioEmbeddingsWeights.py  calculate_clap_score_base_prompts.py  evaluate.py  evaluate_embeddings_for_retrieval.py  generate_100_audios_base_prompts.py  generate_embeddings_base_prompts.py  test.py  typedefs.py  types.py
src/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
utils/: audio.py  device.py  seed.py
(+74 files in other folders)
