[project]
name = "audio-reprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.0",
    "pyyaml>=6.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "laion-clap>=1.1.7",
    "torchvision>=0.23.0",
    "nltk>=3.9.2",
    "psycopg[binary]>=3.2.11",
    "fastapi>=0.121.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "models*", "app*"]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "dvc[s3]>=3.63.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
